--- a/AzureWebsite.Nodejs/public/index.html
+++ b/AzureWebsite.Nodejs/public/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0"><a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Azure Web App</a>
-    <!--input.form-control.form-control-dark.w-100(type='text' placeholder='Search' aria-label='Search')-->
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap"><a class="nav-link" href="#">About...</a></li>
     </ul>
@@ -40,8 +39,15 @@
         </div>
       </nav>
       <main class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" role="main">
-        <h2 class="cover-heading">Hämtar menyträd med Azure Functions.</h2>
-        <ul id="mainMenu"></ul>
+        <h2 class="cover-heading">Various Azure related experiments</h2>
+        <ul>
+          <li>Fetch images with javascript from Azure Storage</li>
+          <li>Fetch images with javascript from an Azure Function that retrieves them from storage</li>
+          <li>Upload image to Azure Storage using Azure Functions</li>
+          <li>Featch a menu from an Azure Function</li>
+          <li>javascript for a menu tree</li>
+          <li>minimal styling using bootstrap </li>
+        </ul>
       </main>
     </div>
   </div>
@@ -51,5 +57,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
   <script src="/scripts/configuration.js"></script>
-  <script src="/scripts/azurefunctions.js"></script>
+  <script src="/scripts/azuremenu.js"></script>
 </body>
