--- a/AzureWebsite.Nodejs/public/from_storage.html
+++ b/AzureWebsite.Nodejs/public/from_storage.html
@@ -12,7 +12,6 @@
 </head>
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0"><a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Azure Web App</a>
-    <!--input.form-control.form-control-dark.w-100(type='text' placeholder='Search' aria-label='Search')-->
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap"><a class="nav-link" href="#">About...</a></li>
     </ul>
@@ -55,6 +54,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="/scripts/configuration.js"></script>
+  <script src="/scripts/azuremenu.js"></script>
   <script src="/scripts/azurestorage.js"></script>
 </body>
