Enabled Cosmos DB

--- a/AzureWebsite.Nodejs/public/menu.html
+++ b/AzureWebsite.Nodejs/public/menu.html
@@ -39,16 +39,8 @@
         </div>
       </nav>
       <main class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" role="main">
-        <main class="inner" role="main">
-          <h2 class="cover-heading">Hämtar bilder med Azure Functions</h2>
-          <div class="row">
-            <div class="column" id="filelist"></div>
-          </div>
-          <div id="result"></div>
-          <form>
-            <input id="fileItem" type="file">
-          </form>
-        </main>
+        <h2 class="cover-heading">Cosmos Db interactions with Azure Function</h2>
+        <button id="createnewmenu">Create New Menu</button>
       </main>
     </div>
   </div>
@@ -59,5 +51,5 @@
   <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
   <script src="/scripts/configuration.js"></script>
   <script src="/scripts/azuremenu.js"></script>
-  <script src="/scripts/azurestoragefunctions.js"></script>
+  <script src="/scripts/cosmosfunctions.js"></script>
 </body>
