--- a/AzureWebsite.Nodejs/public/from_storage.html
+++ b/AzureWebsite.Nodejs/public/from_storage.html
@@ -28,7 +28,7 @@
                 <li class="nav-item"><a class="nav-link active" href="/"><span data-feather="home"></span>                  Start <span class="sr-only">(current)</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="images.html"><span data-feather="file"></span>                  Azure Function Images</a></li>
                 <li class="nav-item"><a class="nav-link" href="from_storage.html"><span data-feather="shopping-cart"></span>                  Azure Storage Images</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><span data-feather="users"></span>                  Customers</a></li>
+                <li class="nav-item"><a class="nav-link" href="menu.html"><span data-feather="users"></span>                  Menu</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><span data-feather="bar-chart-2"></span>                  Reports</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><span data-feather="layers"></span>                  Integrations</a></li>
               </ul>
